# Sudoku

./: CMakeLists.txt  Project1.sln  Sudoku.sln
Project1/: Project1.vcxproj  Project1.vcxproj.filters  main.cpp
Project1/components/: Cell.h  Grid.cpp  Grid.h  GridDimension.cpp  GridDimensions.h  GridStyle.h
Project1/handlers/: ClickHandler.cpp  ClickHandler.h  TextEnteredHandler.cpp  TextEnteredHandler.h
Sudoku/: CMakeLists.txt  Sudoku.vcxproj  Sudoku.vcxproj.filters
Sudoku/generator/: SudokuGenerator.cpp  SudokuGenerator.h
Sudoku/include/sudoku/generator/: SudokuGenerator.h
Sudoku/include/sudoku/validator/: SudokuValidator.h
Sudoku/solver/: SudokuSolver.cpp  SudokuSolver.h
Sudoku/src/generator/: SudokuGenerator.cpp
Sudoku/src/solver/: SudokuSolver.cpp
Sudoku/src/validator/: SudokuValidator.cpp
Sudoku/validator/: SudokuValidator.cpp
SudokuGUI/: CMakeLists.txt  Game.cpp  Game.h  GameController.cpp  GameController.h  SudokuGUI.vcxproj  SudokuGUI.vcxproj.filters  main.cpp
SudokuGUI/components/: Cell.h  Grid.cpp  Grid.h  GridStyle.cpp
SudokuGUI/components/modal_window/: DialogBox.cpp  DialogBox.h  ModalWindow.cpp  ModalWindow.h
SudokuGUI/handlers/: ClickHandler.cpp  KeyPressedHandler.cpp  TextEnteredHandler.cpp
SudokuGUI/include/: Game.h  GameController.h
SudokuGUI/include/components/: DirectionEnum.h  GridStyle.h
SudokuGUI/include/handlers/: KeyPressedHandler.h
SudokuGUI/src/: main.cpp
SudokuGUI/src/components/: Grid.cpp  GridDimension.cpp  GridStyle.cpp
SudokuGUI/src/components/modal_window/: DialogBox.cpp  ModalWindow.cpp
SudokuGUI/src/handlers/: ClickHandler.cpp  KeyPressedHandler.cpp  TextEnteredHandler.cpp
SudokuUnitTests/: SudokuUnitTests.vcxproj  SudokuUnitTests.vcxproj.filters
SudokuUnitTests/generator/: SudokuGeneratorTest.cpp
SudokuUnitTests/solver/: SudokuSolverTest.cpp
SudokuUnitTests/validator/: SudokuValidatorTest.cpp
